[package]
name = "alephium-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.2.0"
#digest = "0.10.1"
#rayon = "1.5.1"
#bytes = "1.1.0"
#nom = "7.1.0" #nom is a parser combinators library written in Rust
#bincode_derive = { path = "derive", version = "2.0.0-alpha.1", optional = true }
#byteorder = "1.4.3"
hex = "0.4.3"
serde = "1.0.131"
serde_derive = "1.0.131"
toml = "0.5.8"
base64 = "0.13.0"
rand = "0.8.4"
itoa = "1.0.1"
time = "0.3.5"
chrono = "0.4.19"
uuid = "0.8.2"
crossbeam = "0.8.1"

rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"

clap = "2.34.0"
log = "0.4.0"
env_logger = "0.9.0"
dirs = "4.0.0"
bincode = { git = "https://github.com/suyanlong/bincode",branch = "trunk" }
parking_lot = "0.11.2"
#crossbeam = "0.8"
num_cpus = "1.13.0"
threadpool = "1.8.1"
futures = "0.3.17"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util ={version = "0.6.9", features = ["full"]}
bytes = "1"

anyhow = "1.0"

[build-dependencies]


[dev-dependencies]
env_logger = "0.9.0"

[features]


[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
